# canvasapi

./: .coveragerc  .gitignore  .mdlrc  .pre-commit-config.yaml  .project  .pydevproject  .python-version  .readthedocs.yml  .travis.yml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  README.md  __init__.py  account.py  assignment.py  avatar.py  canvas.py  canvas_object.py  cmd_docker_build.sh  cmd_run_tests.sh  course.py  dev_requirements.txt  docs_requirements.txt  enrollment.py  exceptions.py  markdown-style.rb  module.py  mypy.ini  paginated_list.py  pyproject.toml  quiz.py  quizzes.py  requester.py  requirements.txt  setup.cfg  (+5 more)
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
canvas_api/: __init__.py  account.py  appointment_group.py  assignment.py  avatar.py  bookmark.py  calendar_event.py  canvas.py  canvas_object.py  conversation.py  course.py  discussion_topic.py  enrollment.py  enrollment_term.py  exceptions.py  external_tool.py  group.py  module.py  page.py  page_view.py  progress.py  quiz.py  requester.py  section.py  upload.py  user.py  util.py
canvasapi/: __init__.py  account.py  account_calendar.py  appointment_group.py  assignment.py  authentication_event.py  authentication_provider.py  authentication_providers.py  avatar.py  blueprint.py  bookmark.py  calendar_event.py  canvas.py  canvas_object.py  collaboration.py  comm_message.py  communication_channel.py  content_export.py  content_migration.py  conversation.py  course.py  course_epub_export.py  course_event.py  current_user.py  feature.py  (+56 more)
(+333 files in other folders)
